added auto scaling groups